--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "cropperjs": "^1.5.9",
+    "echarts": "^4.7.0",
     "element-tiptap": "^1.26.2",
     "element-ui": "^2.15.0",
     "json-bigint": "^1.0.0",
